manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app: petclinic
spec:
  selector:
    app: petclinic
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
