manifests/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app: petclinic
spec:
  to:
    kind: Service
    name: petclinic
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
